updating library